--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@1;100;200;300;400;500;600;700;800;900&display=swap");
 @import url("./animations.css");
+
+onboard-v2 #shadow-root > section {
+	z-index: 3000;
+}
 :root {
 	--max-width: 1100px;
 	--border-radius: 12px;
