--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,7 +47,7 @@ onboard-v2 #shadow-root > section {
 	--card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 	:root {
 		--foreground-rgb: 255, 255, 255;
 		--background-start-rgb: 0, 0, 0;
@@ -78,7 +78,7 @@ onboard-v2 #shadow-root > section {
 		--card-rgb: 100, 100, 100;
 		--card-border-rgb: 200, 200, 200;
 	}
-}
+} */
 
 * {
 	box-sizing: border-box;
@@ -91,6 +91,7 @@ html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
+	background-color: #e0e4e5;
 }
 
 body {
